--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,8 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
+* { padding: 0; margin: 0; }
+canvas { background: #eee; display: block; margin: 0 auto; }
+
 /* Document
    ========================================================================== */
 
